--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
 .env
 
-matching_tool/__pycache__/
-matching_tool/__pycache__/
-proposal_tool/__pycache__/
-quotation_tool/__pycache__/
-send_email_tool/__pycache__/
-summary_tool/__pycache__/
-systems/__pycache__/
-systems/__pycache__/
-views/__pycache__/
+__pycache__/
