--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 __pycache__/
 
 .venv
+
+matching_tool/__pycache__/
+summary_tool/__pycache__/
+quotation_tool/__pycache__/
+proposal_tool/__pycache__/
+send_email_tool/__pycache__/
+views/__pycache__/
