--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,9 @@ quotation_tool/__pycache__/
 proposal_tool/__pycache__/
 send_email_tool/__pycache__/
 views/__pycache__/
+systems/__pycache__/
 output files/
+quotation/
+rfp_app.log
+rfp_logs.json
 product_embeddings.pkl
